factorized editor modals

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -249,185 +249,15 @@
     </div>
 
 
-
-    <!-- new App modal-->
-    <div class="modal fade" id="new-app-modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-
-            <form data-frmdb-ignore-form>
-
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <p class="modal-title text-primary"><i class="la la-lg la-table"></i> New App</p>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
-                        </button>
-                    </div>
-
-                    <div class="modal-body text">
-
-                        <div class="form-group row" data-key="href">
-                            <label class="col-sm-3 control-label">App name</label>
-                            <div class="col-sm-9 input">
-                                <div>
-                                    <input name="appName" type="text" class="form-control" placeholder="New_App_Name" required pattern="[a-zA-Z_]+"
-                                        oninput="this.value = this.value.replace(/[^a-zA-Z_+]/g, '_')">
-                                </div>
-
-                                <div class="alert alert-danger" role="alert" style="display: none">
-                                    A simple danger alert—check it out!
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="form-group row" data-key="href">
-                            <label class="col-sm-3 control-label">App name</label>
-                            <div class="col-sm-9 input">
-                                <select name="basedOnApp" class="form-control">
-                                    <option>-</option>
-                                    <option data-frmdb-table="$frmdb.apps[]" data-frmdb-value="$frmdb.apps[]">app 1</option>
-                                </select>
-                            </div>
-
-                        </div>
-
-                        <div class="modal-footer">
-                            <button class="btn btn-primary btn-lg" type="submit"><i class="la la-check"></i> Create App</button>
-                            <button class="btn btn-secondary btn-lg" type="reset" data-dismiss="modal"><i class="la la-close"></i> Cancel</button>
-                        </div>
-                    </div>
-
-            </form>
-
-        </div>
-    </div>
-
-
-
-    <!-- new Table modal-->
-    <div class="modal fade" id="new-table-modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-
-            <form data-frmdb-ignore-form>
-
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <p class="modal-title text-primary"><i class="la la-lg la-table"></i> New Table</p>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
-                        </button>
-                    </div>
-
-                    <div class="modal-body text">
-
-                        <div class="form-group row" data-key="href">
-                            <label class="col-sm-3 control-label">Table name</label>
-                            <div class="col-sm-9 input">
-                                <div>
-                                    <input name="tableName" type="text" class="form-control" placeholder="New_Table_Name" required pattern="[a-zA-Z_]+"
-                                        oninput="this.value = this.value.replace(/[^a-zA-Z_+]/g, '_')">
-                                </div>
-
-                                <div class="alert alert-danger" role="alert" style="display: none">
-                                    A simple danger alert—check it out!
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="modal-footer">
-                        <button class="btn btn-primary btn-lg" type="submit"><i class="la la-check"></i> Create Table</button>
-                        <button class="btn btn-secondary btn-lg" type="reset" data-dismiss="modal"><i class="la la-close"></i> Cancel</button>
-                    </div>
-                </div>
-
-            </form>
-
-        </div>
-    </div>
-
-
-    <!-- new Column modal-->
-    <div class="modal fade" id="new-column-modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-
-            <form data-frmdb-ignore-form>
-
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <p class="modal-title text-primary"><i class="la la-lg la-table"></i> New Column for table <span data-frmdb-value="selectedTableName">
-                        </p>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
-                        </button>
-                    </div>
-
-                    <div class="modal-body text">
-
-                        <div class="form-group row" data-key="href">
-                            <label class="col-sm-3 control-label">Column name</label>
-                            <div class="col-sm-9 input">
-                                <div>
-                                    <input name="columnName" type="text" class="form-control" placeholder="new_column_name" required pattern="[a-zA-Z_]+"
-                                        oninput="this.value = this.value.replace(/[^a-zA-Z_+]/g, '_')">
-                                </div>
-
-                                <div class="alert alert-danger" role="alert" style="display: none">
-                                    A simple danger alert—check it out!
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="modal-footer">
-                        <button class="btn btn-primary btn-lg" type="submit"><i class="la la-check"></i> Add Column</button>
-                        <button class="btn btn-secondary btn-lg" type="reset" data-dismiss="modal"><i class="la la-close"></i> Cancel</button>
-                    </div>
-                </div>
-
-            </form>
-
-        </div>
-    </div>
-
-    <!-- Intro Video modal-->
-    <div class="modal fade modal-xl" id="intro-video-modal" style="width: 100vw; max-width: 100vw" tabindex="-1" role="dialog">
-        <div class="modal-dialog mt-3" role="document" style="width: 96vw; max-width: 96vw">
-            <div class="modal-content" style="width: 96vw; max-width: 96vw">
-                <div class="modal-header">
-                    <p class="modal-title text-primary"><i class="la la-lg la-video"></i> Intro Video</p>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
-                    </button>
-                </div>
-                <video width="100%" controls autoplay>
-                </video>
-            </div>
-        </div>
-    </div>
-
-    <!-- edit record Modal -->
-    <div class="modal fade" id="edit-record-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-scrollable" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Edit Record</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <frmdb-form></frmdb-form>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <frmdb-add-element></frmdb-add-element>
     <frmdb-img-editor></frmdb-img-editor>
     <frmdb-icon-editor></frmdb-icon-editor>
+
+    <iframe src="editor-edit-record-modal.html" onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
+    <iframe src="editor-intro-video-modal.html" onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
+    <iframe src="editor-new-column-modal.html" onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
+    <iframe src="editor-new-table-modal.html" onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
+    <iframe src="editor-new-app-modal.html" onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
 
     <script src="/formuladb-env/plugins/vendor/js/jquery-3.3.1.slim.min.js"></script>
     <script src="/formuladb-env/plugins/vendor/js/popper.min.js"></script>
