--- a/formuladb/editor-new-app-modal.html
+++ b/formuladb/editor-new-app-modal.html
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="form-group row" data-key="href">
-                        <label class="col-sm-3 control-label">App name</label>
+                        <label class="col-sm-3 control-label">Clone App</label>
                         <div class="col-sm-9 input">
                             <select name="basedOnApp" class="form-control">
                                 <option>-</option>
