--- a/formuladb/editor-edit-record-modal.html
+++ b/formuladb/editor-edit-record-modal.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="edit-record-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-scrollable" role="document">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Edit Record</h5>
