--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -68,7 +68,7 @@
 
                 <button class="btn btn-light" title="Fullscreen (F11)" id="fullscreen-btn" data-toggle="button" aria-pressed="false"
                     data-frmdb-action="fullscreen">
-                    <i class="frmdb-i-fa-arrows"></i>
+                    <i class="frmdb-i-fa-expand-arrows-alt"></i>
                 </button>
 
                 <button id="table-code-editor-btn" data-view="mobile" class="d-none btn btn-sm btn-light btn-sm" title="Table Code Viewer"
