added more style utilitites

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -83,7 +83,7 @@
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="screen-size-dropdown-toggle">
                         <a class="dropdown-item" title="Mobile view" data-frmdb-action="viewport-mobile"><i class=" fa fa-mobile-alt"></i> Mobile</a>
-                        <a class="dropdown-item" title="Tablet view" data-frmdb-action="viewport-tablet"><i class="fa fa-tablet-alt frmdb-i-rotate-90"></i> Tablet</a>
+                        <a class="dropdown-item" title="Tablet view" data-frmdb-action="viewport-tablet"><i class="fa fa-tablet-alt fa-rotate-90"></i> Tablet</a>
                         <a class="dropdown-item" title="Desktop view" data-frmdb-action="viewport-laptop"><i class="fa fa-laptop"></i> Desktop</a>
                     </div>
                 </div>
