more work on icons

--- a/formuladb/icons/frmdb-icons.html
+++ b/formuladb/icons/frmdb-icons.html
@@ -666,6 +666,24 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-0000101-hand-point-plus-circle"></i>
+            </span>
+            <br>
+            <span class='label'>0000101-hand-point-plus-circle</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" frmdb-i-0000102-hand-point-boxes"></i>
+            </span>
+            <br>
+            <span class='label'>0000102-hand-point-boxes</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-000015-f-pattern-solid"></i>
             </span>
             <br>
@@ -765,6 +783,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-1197910-hand-choose-circles"></i>
+            </span>
+            <br>
+            <span class='label'>1197910-hand-choose-circles</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-137094-header"></i>
             </span>
             <br>
@@ -787,6 +814,15 @@
             </span>
             <br>
             <span class='label'>2669552-font</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" frmdb-i-2892304-hand-point-choose"></i>
+            </span>
+            <br>
+            <span class='label'>2892304-hand-point-choose</span>
         </div>
 
 
