more work on icons

--- a/formuladb/icons/frmdb-icons.html
+++ b/formuladb/icons/frmdb-icons.html
@@ -675,6 +675,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-0000102-hand-point-boxes-thk"></i>
+            </span>
+            <br>
+            <span class='label'>0000102-hand-point-boxes-thk</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-0000102-hand-point-boxes"></i>
             </span>
             <br>
@@ -846,6 +855,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-45501-move"></i>
+            </span>
+            <br>
+            <span class='label'>45501-move</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-496501-check-mark"></i>
             </span>
             <br>
@@ -904,6 +922,15 @@
             </span>
             <br>
             <span class='label'>608122-many-windows</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" frmdb-i-617055-hand-point-thk"></i>
+            </span>
+            <br>
+            <span class='label'>617055-hand-point-thk</span>
         </div>
 
 
