more work in icons; fixes for page element editing

--- a/formuladb/icons/frmdb-icons.html
+++ b/formuladb/icons/frmdb-icons.html
@@ -693,6 +693,42 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-0000103-hand-point-up"></i>
+            </span>
+            <br>
+            <span class='label'>0000103-hand-point-up</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" frmdb-i-0000104-hand-point-up-boxes"></i>
+            </span>
+            <br>
+            <span class='label'>0000104-hand-point-up-boxes</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" frmdb-i-0000105-paste-inside"></i>
+            </span>
+            <br>
+            <span class='label'>0000105-paste-inside</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" frmdb-i-0000106-paste-after"></i>
+            </span>
+            <br>
+            <span class='label'>0000106-paste-after</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-000015-f-pattern-solid"></i>
             </span>
             <br>
