added bootstrap styles to pure-CSS tabs

--- a/formuladb-env/frmdb-platform-apps/themes/_head.html
+++ b/formuladb-env/frmdb-platform-apps/themes/_head.html
@@ -13,5 +13,6 @@
 <link rel="stylesheet" type="text/css" href="/formuladb-env/icons/formuladb/fdb-i.css" />
 <link rel="stylesheet" id="frmdb-theme-css" href="/formuladb-env/css/lux-ffc208-353b41.css">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
+<link rel="stylesheet" href="/formuladb-env/icons/font-awesome/css/font-awesome.min.css">
 
 </head>
