--- a/formuladb-env/frmdb-platform-apps/themes/__test-pure-css-tabs.html
+++ b/formuladb-env/frmdb-platform-apps/themes/__test-pure-css-tabs.html
@@ -21,22 +21,35 @@
             display: grid;
             grid-template-rows: auto 1fr;
         }
+
+        .frmdb-tabs .nav-item {
+            display: contents;
+        }
+
         .frmdb-tabs .frmdb-tab {
             grid-row: 1;
         }
+
         .frmdb-tab-content {
             grid-row: 2;
             display: none;
             opacity: 0;
             visibility: hidden;
         }
-        .frmdb-tab-content:last-child:nth-child(3) ~ .frmdb-tab-content {
+
+        .frmdb-tab-content:last-child:nth-child(3)~.frmdb-tab-content {
             grid-column: 1/1;
         }
-        .frmdb-tab-content:last-child:nth-child(6) ~ .frmdb-tab-content {
+
+        .frmdb-tab-content:last-child:nth-child(6)~.frmdb-tab-content {
             grid-column: 1/2;
         }
-        .frmdb-tab-content:last-child:nth-child(9) ~ .frmdb-tab-content {
+
+        .frmdb-tab-content:last-child:nth-child(9)~.frmdb-tab-content {
+            grid-column: 1/3;
+        }
+
+        .frmdb-tab-content {
             grid-column: 1/3;
         }
 
@@ -45,7 +58,7 @@
             grid-column: 1/3;
         }
 
-        .frmdb-tabs > input[type="radio"]:checked + .frmdb-tab-content {
+        .frmdb-tabs input[type="radio"]:checked + .frmdb-tab-content {
             display: block;
             visibility: visible;
             opacity: 1;
@@ -53,45 +66,47 @@
         }
     </style>
 
-    <div id="myTabs" class="frmdb-tabs">
-        <label for="home" class="frmdb-tab nav-link">
-            Home
-        </label>
-        <input class="d-none" type="radio" id="home" name="myTabs" value="">
-        <div class="frmdb-tab-content">
-            <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu
-                stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg
-                carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth.
-                Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat
-                salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher
-                voluptate nisi qui.</p>
-        </div>
+    <ul class="frmdb-tabs nav nav-tabs">
+        <li class="nav-item">
+            <label for="tab1" class="frmdb-tab nav-link">Tab 1</label>
+            <input class="d-none" type="radio" id="tab1" name="myTabs" value="">
+            <div class="frmdb-tab-content">
+                <h1>Tab1</h1>
+                <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu
+                    stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg
+                    carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth.
+                    Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat
+                    salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher
+                    voluptate nisi qui.</p>
+            </div>
+        </li>
+        <li class="nav-item">
+            <label for="tab2" class="frmdb-tab nav-link">Tab 2</label>
+            <input class="d-none" type="radio" id="tab2" name="myTabs" value="">
+            <div class="frmdb-tab-content">
+                <h1>Tab2</h1>
+                <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee
+                    squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes
+                    anderson artisan four loko farm-to-table craft beer twee. Qui photo booth
+                    letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl
+                    cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.
+                </p>
+            </div>
+        </li>
+        <li class="nav-item">
+            <label for="tab3" class="frmdb-tab nav-link">Tab 3</label>
+            <input class="d-none" type="radio" id="tab3" name="myTabs" value="">
+            <div class="frmdb-tab-content">
+                <h1>Tab3</h1>
+                <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they
+                    sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny
+                    pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin.
+                    Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS
+                    viral locavore cosby sweater.</p>
+            </div>
+        </li>
+    </ul>
 
-        <label for="profile" class="frmdb-tab nav-link">
-            Profile
-        </label>
-        <input class="d-none" type="radio" id="profile" name="myTabs" value="">
-        <div class="frmdb-tab-content">
-            <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee
-                squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes
-                anderson artisan four loko farm-to-table craft beer twee. Qui photo booth
-                letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl
-                cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.
-            </p>
-        </div>
-
-        <label for="contact" class="frmdb-tab nav-link">
-            Contact
-        </label>
-        <input class="d-none" type="radio" id="contact" name="myTabs" value="">
-        <div class="frmdb-tab-content">
-            <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they
-                sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny
-                pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin.
-                Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS
-                viral locavore cosby sweater.</p>
-        </div>
-    </div>
 </body>
 
 </html>
