draft spec working: SSR for look

--- a/formuladb-env/frmdb-apps/formuladb_io/_head.html
+++ b/formuladb-env/frmdb-apps/formuladb_io/_head.html
@@ -22,5 +22,5 @@
 <meta name="author" content="FormulaDB">
 <title>FormulaDB - Build Applications Without Code</title>
 <link href="/formuladb-env/static/frmdb-apps/formuladb_io/favicon.png" rel="icon" type="image/png">
-<link id="frmdb-theme-css" type="text/css" href="/formuladb-env/css/cerulean-7795f8-6c757d.css" rel="stylesheet">
+<link id="frmdb-look-css" type="text/css" href="/formuladb-env/css/cerulean-7795f8-6c757d.css" rel="stylesheet">
 </head>
