--- a/formuladb-env/frmdb-apps/Photography_portofolio_services/_head.html
+++ b/formuladb-env/frmdb-apps/Photography_portofolio_services/_head.html
@@ -11,7 +11,7 @@
 <link rel="icon" href="/formuladb-env/static/frmdb-apps/formuladb_io/favicon.png" type="image/png">
 <title>FormulaDB Themes</title>
 <link rel="stylesheet" href="/formuladb-env/icons/font-awesome/css/font-awesome.min.css">
-<link rel="stylesheet" id="frmdb-theme-css" href="/formuladb-env/css/darkly-008cba-eeeeee.css">
+<link rel="stylesheet" id="frmdb-look-css" href="/formuladb-env/css/darkly-008cba-eeeeee.css">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
 <script src="chrome-extension://mooikfkahbdckldjjndioackbalphokd/assets/prompt.js"></script>
 <script src="chrome-extension://mooikfkahbdckldjjndioackbalphokd/assets/prompt.js"></script>
