--- a/formuladb-env/frmdb-apps/themes/index.html
+++ b/formuladb-env/frmdb-apps/themes/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Comfort -->
-    <!-- <link rel="stylesheet" id="frmdb-theme-css" href="_css/lux-ffc208-353b41.css"> -->
+    <!-- <link rel="stylesheet" id="frmdb-look-css" href="_css/lux-ffc208-353b41.css"> -->
     <!-- Grand Frames -->
-    <link rel="stylesheet" id="frmdb-theme-css" href="/formuladb-env/css/cosmo-cb8670-363636.css">
+    <link rel="stylesheet" id="frmdb-look-css" href="/formuladb-env/css/cosmo-cb8670-363636.css">
 </head>
 
 <body data-frmdb-theme="Clean">
